# SPDX-FileCopyrightText: Copyright (c) 2025 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = ["setuptools>=65.0", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "triton-distributed-runtime"
dynamic = ["version"]
authors = [
    { name = "NVIDIA Inc.", email = "sw-dl-triton@nvidia.com" },
]
license = { text = "Apache-2.0" }

dependencies = ["triton_distributed.icp >= 0"]

[tool.setuptools_scm]
version_file = "src/triton_distributed/runtime/_version.py"
root = "../.."

[tool.setuptools.packages.find]
where = ["src"]
include = ["triton_distributed.runtime*"]
namespaces = true

[tool.setuptools]
license-files = ["../../LICENSE"]