[package]
name = "triton-distributed"
version = "0.1.1"
edition = "2021"
authors = ["NVIDIA"]
homepage = "https://github.com/triton-inference-server/triton_distributed"

[dependencies]
# workspace - when we expand to multiple crates; put these in the workspace
anyhow = { version = "1" }
async-nats = { version = "0.38", features = ["service"] }
async-stream = { version = "0.3" }
async-trait = { version = "0.1" }
blake3 = "1"
bytes = "1"
derive_builder = "0.20"
derive-getters = "0.5"
either = { version = "1.13", features = ["serde"] }
figment = { version = "0.10.19", features = ["env", "json", "toml", "test"] }
futures = { version = "0.3" }
once_cell = "1"
prometheus = { version = "0.13" }
regex = { version = "1" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = { version = "1" }
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1" }
tokio-util = { version = "0.7", features = ["codec", "net"] }
tracing = { version = "0.1" }
uuid = { version = "1", features = ["v4", "serde"] }
validator = { version = "0.20", features = ["derive"] }
xxhash-rust = { version = "0.8", features = ["xxh3", "const_xxh3"] }

# non-workspace
async-once-cell = "0.5.4"
educe = "0.6.0"
etcd-client = "0.14"
local-ip-address = { version = "0.6.3" }
nid = { version = "3.0.0", features = ["serde"] }
nix = { version = "0.29", features = ["signal"] }
nuid = { version = "0.5" }
rand = { version = "0.8"}

[dev-dependencies]
assert_matches = "1.5.0"
