#  SPDX-FileCopyrightText: Copyright (c) 2025 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
#  SPDX-License-Identifier: Apache-2.0
#  #
#  Licensed under the Apache License, Version 2.0 (the "License");
#  you may not use this file except in compliance with the License.
#  You may obtain a copy of the License at
#  #
#  http://www.apache.org/licenses/LICENSE-2.0
#  #
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-dynamo-store"
version = "0.1.0"
description = "AI Dynamo Store for managing Dynamo artifacts"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.11",
    "uvicorn>=0.34.0",
    "sqlalchemy>=2.0.39",
    "pydantic>=2.10.6,<2.11.0",
    "aiosqlite==0.21.0",
    "asyncpg==0.30.0",
    "base58==2.1.1",
    "boto3==1.37.1",
    "botocore==1.37.1",
    "sqlmodel==0.0.22",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "ruff>=0.0.270",
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0"
]

[project.scripts]
ai-dynamo-store = "ai_dynamo_store.main:main"