#  SPDX-FileCopyrightText: Copyright (c) 2025 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
#  SPDX-License-Identifier: Apache-2.0
#  #
#  Licensed under the Apache License, Version 2.0 (the "License");
#  you may not use this file except in compliance with the License.
#  You may obtain a copy of the License at
#  #
#  http://www.apache.org/licenses/LICENSE-2.0
#  #
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.

[project]
name = "ai-dynamo-sdk"
version = "0.1.0"
description = "Distributed Inference Framework - SDK"
readme = "README.md"
authors = [
    { name = "NVIDIA Inc.", email = "sw-dl-dynamo@nvidia.com" },
]
dependencies = [
    # TODO: currently compatible with bentoml==1.4.1,
    # v1.4.2 has removed normalize_identifier which is used in dynamo
    # "dynamo=={dynamo_version}",
    "bentoml==1.4.1",
    "types-psutil==7.0.0.20250218",
    "kubernetes==32.0.1",
]

[project.scripts]
dynamo = "dynamo.sdk.cli.cli:cli"

[tool.setuptools]
namespace-packages = ["dynamo"]
package-dir = {"dynamo.sdk" = "src/dynamo/sdk"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dynamo"]